<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <group>
        <item android:title="">

            <menu>
                <item
                    android:id="@+id/item_city"
                    android:icon="@drawable/ic_mos"
                    android:title="اختر مدينتك"
                    />

            </menu>
        </item>
    </group>
  <group>
      <item android:title="">

          <menu>
              <item
                      android:id="@+id/azk1"
                      android:icon="@drawable/ic_mos"
                      android:title="أذكار مابعد الصلاة"
              />

          </menu>
      </item>
  </group>

    <item android:title="@string/Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share"/>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="About"/>
            <item
                android:id="@+id/nav_developer"
                android:icon="@drawable/ic_baseline_developer_mode_24"
                android:title="@string/developers"/>
        </menu>
    </item>
    <item android:title="@string/Settings">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/Settings"/>
        </menu>
    </item>
</menu>
