<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Azkar_1">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/azk1"
                android:textSize="32dp"
                android:fontFamily="@font/ge"
                android:layout_marginTop="20dp"

        />

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                        >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zeker1"
                    android:textSize="20dp"
                    android:fontFamily="@font/hamaa"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="start"
                    android:padding="4dp"
                    android:background="@color/col11"
            />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zeker2"
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:padding="4dp"
                        android:background="@color/col12"
                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zeker3"
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:padding="4dp"
                        android:background="@color/col11"
                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zeker4"
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:background="@color/col12"
                        android:padding="4dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zeker5"
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:padding="4dp"
                        android:background="@color/col11"

                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zeker6"
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:background="@color/col12"
                        android:padding="4dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zeker7"
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:background="@color/col12"
                        android:padding="4dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zeker8"
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:background="@color/col12"
                        android:padding="4dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ثلاث مرات بعد صلاتي الفجر والمغرب. ومرة بعد الصلوات الأخرى."
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:background="@color/col12"
                        android:padding="4dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zeker9"
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:background="@color/col11"
                        android:padding="4dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zeker10"
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:background="@color/col12"
                        android:padding="4dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="عَشْر مَرّات بَعْدَ المَغْرِب وَالصّـبْح"
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:background="@color/col12"
                        android:padding="4dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="اللهُـمَّ إِنِّـي أَسْأَلُـكَ عِلْمـاً نافِعـاً وَرِزْقـاً طَيِّـباً ، وَعَمَـلاً مُتَقَـبَّلاً."
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:background="@color/col11"
                        android:padding="4dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="بَعْد السّلامِ من صَلاةِ الفَجْر."
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:background="@color/col11"
                        android:padding="4dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="اللَّهُمَّ أَجِرْنِي مِنْ النَّار "
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:background="@color/col12"
                        android:layout_gravity="start"
                        android:padding="4dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="بعد صلاة الصبح والمغرب."
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:layout_gravity="start"
                        android:background="@color/col12"
                        android:padding="4dp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="اللَّهُمَّ أَعِنِّي عَلَى ذِكْرِكَ وَشُكْرِكَ وَحُسْنِ عِبَادَتِكَ."
                        android:textSize="20dp"
                        android:fontFamily="@font/hamaa"
                        android:background="@color/col11"
                        android:layout_gravity="start"
                        android:padding="4dp"
                        android:layout_marginBottom="10dp"
                />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>