<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.doCompany.alazan.SettingActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contentBodyColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            style="@style/viewParent.headerText"
            android:text="@string/Settings" />

        <Switch
            android:id="@+id/Voice"
            style="@style/settingsText"
            android:drawableStart="@drawable/ic_baseline_voice_over_off_24"
            android:fontFamily="@font/ges"
            android:checked="true"
            android:text="@string/voice" />


        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="Notifications"/>

        <Switch
            style="@style/settingsText"
            android:checked="true"
            android:drawableStart="@drawable/ic_notifications"
            android:fontFamily="@font/ges"
            android:enabled="false"
            android:text="@string/Notifications" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="Regional"/>

        <TextView
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/ic_languages"
            android:text="Language" />


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_awqaf"/>
        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="App ver 1.0.0"
            android:textAlignment="center"/>

    </LinearLayout>
</ScrollView>