<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".MainActivity"
        android:background="@drawable/asd"
         android:orientation="vertical"
        android:gravity="start"
        android:layout_centerVertical="true">


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/re"
    >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="التاريخ"
                android:textSize="@dimen/font_date"
                android:layout_marginStart="15dp"
                android:id="@+id/dating"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/jaz"


        />
        <ImageView android:layout_width="@dimen/datepicker"
                   android:layout_height="@dimen/datepicker"
                   android:background="@drawable/calender"
                   android:layout_marginStart="2dp"
                   android:id="@+id/im_cal"
                   android:layout_gravity="center_vertical"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/h_r_sel"
                android:text="اختر مدينتك"
                android:layout_marginStart="170dp"
                android:textSize="12dp"
                android:id="@+id/btn_city"
                android:layout_gravity="center_vertical"
                android:background="@drawable/sel"
                android:textColor="@color/white"
                android:fontFamily="@font/jaze"
        />


    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hi_rect"
            android:gravity="center_vertical"
            android:layout_marginTop="30dp"
            android:background="@drawable/rect"
    >

        <TextView
                android:text="@string/faj"
                android:textColor="@color/white"
                android:fontFamily="@font/jaze"
                android:textSize="@dimen/font_salat"
                android:textAlignment="textStart"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:id="@+id/t_faj"
        />
        <TextView
                android:textSize="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginRight="100dp"
                android:id="@+id/t_faj1"
                android:textColor="@color/white"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hi_rect"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_rect_top"
            android:background="@drawable/rectt"
    >

        <TextView
                android:text="@string/Shoroq"
                android:textColor="@color/white"
                android:fontFamily="@font/jaze"
                android:textSize="@dimen/font_salat"
                android:textAlignment="textStart"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:id="@+id/t_duha"
        />
        <TextView
                android:textSize="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginRight="100dp"
                android:id="@+id/t_duha1"
                android:textColor="@color/white"

        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hi_rect"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_rect_top"
            android:background="@drawable/rect">

        <TextView
                android:text="@string/dhuhor"
                android:textColor="@color/white"
                android:fontFamily="@font/jaze"
                 android:textSize="@dimen/font_salat"
                android:textAlignment="textStart"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:id="@+id/t_dhuhor"
        />
        <TextView
                android:textSize="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginRight="100dp"
                android:id="@+id/t_dhuhor1"
                android:textColor="@color/white"

        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hi_rect"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_rect_top"
            android:background="@drawable/rectt">

        <TextView
                android:text="@string/Asr"
                android:textColor="@color/white"
                android:fontFamily="@font/jaze"
                android:textSize="@dimen/font_salat"
                android:textAlignment="textStart"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:id="@+id/t_asr"
        />
        <TextView
                android:textSize="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginRight="100dp"
                android:id="@+id/t_asr1"
                android:textColor="@color/white"

        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hi_rect"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_rect_top"
            android:background="@drawable/rect">

        <TextView
                android:text="@string/Moghrib"
                android:textColor="@color/white"
                android:fontFamily="@font/jaze"
                android:textSize="@dimen/font_salat"
                android:textAlignment="textStart"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:id="@+id/t_moghrib"
        />
        <TextView
                android:textSize="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginRight="100dp"
                android:id="@+id/t_moghrib1"
                android:textColor="@color/white"

        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hi_rect"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_rect_top"
            android:background="@drawable/rectt">

        <TextView
                android:text="@string/esh"
                android:textColor="@color/white"
                android:fontFamily="@font/jaze"
                android:textSize="@dimen/font_salat"
                android:textAlignment="textStart"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:id="@+id/t_eshaa"
        />
        <TextView
                android:textSize="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginRight="100dp"
                android:id="@+id/t_eshaa1"
                android:textColor="@color/white"
        />
    </LinearLayout>
    <Button
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/btn_view"
            android:textSize="@dimen/font_date"
            android:id="@+id/btn"
            android:background="@drawable/str"
    />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hi_rect"
            android:layout_marginTop="30dp"
            android:background="@color/line"
            android:gravity="center">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ge"
                android:text="@string/note"
                android:textSize="@dimen/font_note"

                android:textColor="@color/text"

        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-8351493934827814/9041517085">

</com.google.android.gms.ads.AdView>

    </LinearLayout>

</LinearLayout>